# r2c

./: .gitignore  CMakeLists.txt  License.txt  Readme.md
cmake/: Setup.cmake
docs/: CMakeLists.txt  Doxyfile  index.md
example_projects/: kubix_demo.project  spherix_demo.project
module.bbox/: CMakeLists.txt  bbox_render_delegate.cc  bbox_render_delegate.h  bbox_utils.cc  bbox_utils.h  layer_bbox.cc  layer_bbox.cid  light_bbox.cc  light_bbox.cid  main.cc  material_bbox.cc  material_bbox.cid  module_light_bbox.cc  module_light_bbox.h  module_material_bbox.cc  module_material_bbox.h  module_renderer_bbox.cc  module_renderer_bbox.h  renderer_bbox.cc  renderer_bbox.cid
module.dummy/: CMakeLists.txt  dummy_render_delegate.cc  dummy_render_delegate.h  dummy_utils.cc  dummy_utils.h  layer_dummy.cc  layer_dummy.cid  light_dummy.cc  light_dummy.cid  main.cc  material_dummy.cc  material_dummy.cid  module_light_dummy.cc  module_light_dummy.h  module_material_dummy.cc  module_material_dummy.h  module_renderer_dummy.cc  module_renderer_dummy.h  module_texture_dummy.cc  module_texture_dummy.h  renderer_dummy.cc  renderer_dummy.cid  texture_dummy.cc  texture_dummy.cid
module.kubick/: CMakeLists.txt  kubick_layer.cc  kubick_layer.cid  kubick_light.cc  kubick_light.cid  kubick_material.cc  kubick_material.cid  kubick_module_light.cc  kubick_module_light.h  kubick_module_material.cc  kubick_module_material.h  kubick_module_renderer.cc  kubick_module_renderer.h  kubick_module_texture.cc  kubick_module_texture.h  kubick_render_delegate.cc  kubick_render_delegate.h  kubick_renderer.cc  kubick_renderer.cid  kubick_texture.cc  kubick_texture.cid  kubick_utils.cc  kubick_utils.h  main.cc
module.kubix/: CMakeLists.txt  kubix_layer.cc  kubix_layer.cid  kubix_light.cc  kubix_light.cid  kubix_material.cc  kubix_material.cid  kubix_module_light.cc  kubix_module_light.h  kubix_module_material.cc  kubix_module_material.h  kubix_module_renderer.cc  kubix_module_renderer.h  kubix_module_texture.cc  kubix_module_texture.h  kubix_render_delegate.cc  kubix_render_delegate.h  kubix_renderer.cc  kubix_renderer.cid  kubix_texture.cc  kubix_texture.cid  kubix_utils.cc  kubix_utils.h  main.cc
module.layer.r2c.scene/: CMakeLists.txt  layer_r2c_scene.cc  layer_r2c_scene.cid  main.cc
module.redshift/: CMakeLists.txt  layer_redshift.cc  layer_redshift.cid  light_redshift.cc  light_redshift.cid  main.cc  material_redshift.cc  material_redshift.cid  module_light_redshift.cc  module_light_redshift.h  module_material_redshift.cc  module_material_redshift.h  module_renderer_redshift.cc  module_renderer_redshift.h  module_texture_redshift.cc  module_texture_redshift.h  redshift_render_delegate.cc  redshift_render_delegate.h  redshift_utils.cc  redshift_utils.h  renderer_redshift.cc  renderer_redshift.cid  texture_redshift.cc  texture_redshift.cid
module.renderer.base/: CMakeLists.txt  main.cc  renderer_base.cc  renderer_base.cid
module.spherix/: CMakeLists.txt  main.cc  spherix_external_renderer.h  spherix_layer.cc  spherix_layer.cid  spherix_light.cc  spherix_light.cid  spherix_material.cc  spherix_material.cid  spherix_module_light.cc  spherix_module_light.h  spherix_module_material.cc  spherix_module_material.h  spherix_module_renderer.cc  spherix_module_renderer.h  spherix_module_texture.cc  spherix_module_texture.h  spherix_register_shaders.h  spherix_render_delegate.cc  spherix_render_delegate.h  spherix_renderer.cc  spherix_renderer.cid  spherix_texture.cc  spherix_texture.cid  spherix_utils.cc  spherix_utils.h
r2c/: CMakeLists.txt  r2c_common.cc  r2c_common.h  r2c_export.h  r2c_instancer.cc  r2c_instancer.h  r2c_module_layer_scene.cc  r2c_module_layer_scene.h  r2c_render_buffer.cc  r2c_render_buffer.h  r2c_render_delegate.cc  r2c_render_delegate.h  r2c_scene_delegate.cc  r2c_scene_delegate.h
